# python-log-analyzer

./: .gitignore  Makefile  README.md  pyproject.toml
data/: log.txt
src/log_analyzer/: __init__.py  analyzer.py  cli.py
tests/: test_analyzer.py
